# chez-scheme-hs

./: .ghc-versions  .gitignore  .gitmodules  .pre-commit-config.yaml  .stylish-haskell.yaml  ChangeLog.md  LICENSE  README.md  Setup.hs  bumpver.toml  cabal.project  cabal.project.ghc-8.10.freeze  cabal.project.ghc-9.0.freeze  cabal.project.ghc-9.2.freeze  cabal.project.ghc-9.4.freeze  chez-scheme-hs.cabal  hie.yaml
.github/actions/setup-haskell/: action.yml
.github/workflows/: build.yml  ci.yml
script/: extra-source-files  matrix  matrix-freeze  matrix-freeze.sh  matrix.sh  test-sdist.sh
src/Foreign/: ChezScheme.hs
tests/: Spec.hs
