cabal-version:      2.4
name:               chez-scheme-hs
version:            9.5.9
description:
  Please see the README on GitHub at <https://github.com/wenkokke/chez-scheme-hs#readme>

homepage:           https://github.com/wenkokke/chez-scheme-hs#readme
bug-reports:        https://github.com/wenkokke/chez-scheme-hs/issues
author:             Wen Kokke
maintainer:         wenkokke@users.noreply.github.com}
copyright:          © 2022-2022 Wen Kokke
license:            MIT
build-type:         Custom
extra-source-files:
  ChangeLog.md
  README.md
  vendor/ChezScheme/.git
  vendor/ChezScheme/bintar/Makefile
  vendor/ChezScheme/boot/a6le/equates.h
  vendor/ChezScheme/boot/a6le/petite.boot
  vendor/ChezScheme/boot/a6le/scheme.boot
  vendor/ChezScheme/boot/a6le/scheme.h
  vendor/ChezScheme/boot/a6nt/equates.h
  vendor/ChezScheme/boot/a6nt/petite.boot
  vendor/ChezScheme/boot/a6nt/scheme.boot
  vendor/ChezScheme/boot/a6nt/scheme.h
  vendor/ChezScheme/boot/a6osx/equates.h
  vendor/ChezScheme/boot/a6osx/petite.boot
  vendor/ChezScheme/boot/a6osx/scheme.boot
  vendor/ChezScheme/boot/a6osx/scheme.h
  vendor/ChezScheme/boot/arm32le/equates.h
  vendor/ChezScheme/boot/arm32le/petite.boot
  vendor/ChezScheme/boot/arm32le/scheme.boot
  vendor/ChezScheme/boot/arm32le/scheme.h
  vendor/ChezScheme/boot/i3le/equates.h
  vendor/ChezScheme/boot/i3le/petite.boot
  vendor/ChezScheme/boot/i3le/scheme.boot
  vendor/ChezScheme/boot/i3le/scheme.h
  vendor/ChezScheme/boot/i3nt/equates.h
  vendor/ChezScheme/boot/i3nt/petite.boot
  vendor/ChezScheme/boot/i3nt/scheme.boot
  vendor/ChezScheme/boot/i3nt/scheme.h
  vendor/ChezScheme/boot/i3osx/equates.h
  vendor/ChezScheme/boot/i3osx/petite.boot
  vendor/ChezScheme/boot/i3osx/scheme.boot
  vendor/ChezScheme/boot/i3osx/scheme.h
  vendor/ChezScheme/boot/ta6le/equates.h
  vendor/ChezScheme/boot/ta6le/petite.boot
  vendor/ChezScheme/boot/ta6le/scheme.boot
  vendor/ChezScheme/boot/ta6le/scheme.h
  vendor/ChezScheme/boot/ta6nt/equates.h
  vendor/ChezScheme/boot/ta6nt/petite.boot
  vendor/ChezScheme/boot/ta6nt/scheme.boot
  vendor/ChezScheme/boot/ta6nt/scheme.h
  vendor/ChezScheme/boot/ta6osx/equates.h
  vendor/ChezScheme/boot/ta6osx/petite.boot
  vendor/ChezScheme/boot/ta6osx/scheme.boot
  vendor/ChezScheme/boot/ta6osx/scheme.h
  vendor/ChezScheme/boot/ti3le/equates.h
  vendor/ChezScheme/boot/ti3le/petite.boot
  vendor/ChezScheme/boot/ti3le/scheme.boot
  vendor/ChezScheme/boot/ti3le/scheme.h
  vendor/ChezScheme/boot/ti3nt/equates.h
  vendor/ChezScheme/boot/ti3nt/petite.boot
  vendor/ChezScheme/boot/ti3nt/scheme.boot
  vendor/ChezScheme/boot/ti3nt/scheme.h
  vendor/ChezScheme/boot/ti3osx/equates.h
  vendor/ChezScheme/boot/ti3osx/petite.boot
  vendor/ChezScheme/boot/ti3osx/scheme.boot
  vendor/ChezScheme/boot/ti3osx/scheme.h
  vendor/ChezScheme/c/a6nt-jump.asm
  vendor/ChezScheme/c/alloc.c
  vendor/ChezScheme/c/arm32le.c
  vendor/ChezScheme/c/build.bat
  vendor/ChezScheme/c/compress-io.c
  vendor/ChezScheme/c/compress-io.h
  vendor/ChezScheme/c/cs.ico
  vendor/ChezScheme/c/expeditor.c
  vendor/ChezScheme/c/externs.h
  vendor/ChezScheme/c/fasl.c
  vendor/ChezScheme/c/flushcache.c
  vendor/ChezScheme/c/foreign.c
  vendor/ChezScheme/c/gc-011.c
  vendor/ChezScheme/c/gc-ocd.c
  vendor/ChezScheme/c/gc-oce.c
  vendor/ChezScheme/c/gc.c
  vendor/ChezScheme/c/gcwrapper.c
  vendor/ChezScheme/c/globals.h
  vendor/ChezScheme/c/i3le.c
  vendor/ChezScheme/c/intern.c
  vendor/ChezScheme/c/io.c
  vendor/ChezScheme/c/itest.c
  vendor/ChezScheme/c/main.c
  vendor/ChezScheme/c/Makefile.a6nt
  vendor/ChezScheme/c/Makefile.i3nt
  vendor/ChezScheme/c/Makefile.ta6nt
  vendor/ChezScheme/c/Makefile.ti3nt
  vendor/ChezScheme/c/Mf-a6fb
  vendor/ChezScheme/c/Mf-a6le
  vendor/ChezScheme/c/Mf-a6nb
  vendor/ChezScheme/c/Mf-a6nt
  vendor/ChezScheme/c/Mf-a6ob
  vendor/ChezScheme/c/Mf-a6osx
  vendor/ChezScheme/c/Mf-a6s2
  vendor/ChezScheme/c/Mf-arm32le
  vendor/ChezScheme/c/Mf-base
  vendor/ChezScheme/c/Mf-i3fb
  vendor/ChezScheme/c/Mf-i3le
  vendor/ChezScheme/c/Mf-i3nb
  vendor/ChezScheme/c/Mf-i3nt
  vendor/ChezScheme/c/Mf-i3ob
  vendor/ChezScheme/c/Mf-i3osx
  vendor/ChezScheme/c/Mf-i3qnx
  vendor/ChezScheme/c/Mf-i3s2
  vendor/ChezScheme/c/Mf-ppc32le
  vendor/ChezScheme/c/Mf-ta6fb
  vendor/ChezScheme/c/Mf-ta6le
  vendor/ChezScheme/c/Mf-ta6nb
  vendor/ChezScheme/c/Mf-ta6nt
  vendor/ChezScheme/c/Mf-ta6ob
  vendor/ChezScheme/c/Mf-ta6osx
  vendor/ChezScheme/c/Mf-ta6s2
  vendor/ChezScheme/c/Mf-ti3fb
  vendor/ChezScheme/c/Mf-ti3le
  vendor/ChezScheme/c/Mf-ti3nb
  vendor/ChezScheme/c/Mf-ti3nt
  vendor/ChezScheme/c/Mf-ti3ob
  vendor/ChezScheme/c/Mf-ti3osx
  vendor/ChezScheme/c/Mf-ti3s2
  vendor/ChezScheme/c/Mf-tppc32le
  vendor/ChezScheme/c/new-io.c
  vendor/ChezScheme/c/nocurses.h
  vendor/ChezScheme/c/number.c
  vendor/ChezScheme/c/ppc32.c
  vendor/ChezScheme/c/ppc32le.c
  vendor/ChezScheme/c/prim.c
  vendor/ChezScheme/c/prim5.c
  vendor/ChezScheme/c/print.c
  vendor/ChezScheme/c/scheme.c
  vendor/ChezScheme/c/scheme.exe.manifest
  vendor/ChezScheme/c/scheme.rc
  vendor/ChezScheme/c/schlib.c
  vendor/ChezScheme/c/schsig.c
  vendor/ChezScheme/c/segment.c
  vendor/ChezScheme/c/segment.h
  vendor/ChezScheme/c/sort.h
  vendor/ChezScheme/c/statics.c
  vendor/ChezScheme/c/stats.c
  vendor/ChezScheme/c/symbol.c
  vendor/ChezScheme/c/system.h
  vendor/ChezScheme/c/thread.c
  vendor/ChezScheme/c/thread.h
  vendor/ChezScheme/c/types.h
  vendor/ChezScheme/c/version.h
  vendor/ChezScheme/c/vs.bat
  vendor/ChezScheme/c/windows.c
  vendor/ChezScheme/checkin
  vendor/ChezScheme/configure
  vendor/ChezScheme/csug/bibliography.stex
  vendor/ChezScheme/csug/binding.stex
  vendor/ChezScheme/csug/canned/about.html
  vendor/ChezScheme/csug/canned/cisco-logo-large.png
  vendor/ChezScheme/csug/canned/cisco-logo-orig.png
  vendor/ChezScheme/csug/canned/cisco-logo.png
  vendor/ChezScheme/csug/canned/copyright.html
  vendor/ChezScheme/csug/canned/fatfibhtml-orig.png
  vendor/ChezScheme/csug/canned/fatfibhtml.png
  vendor/ChezScheme/csug/canned/profilehtml-orig.png
  vendor/ChezScheme/csug/canned/profilehtml.png
  vendor/ChezScheme/csug/canned/profview.png
  vendor/ChezScheme/csug/compat.stex
  vendor/ChezScheme/csug/contents.stex
  vendor/ChezScheme/csug/control.stex
  vendor/ChezScheme/csug/copyright.stex
  vendor/ChezScheme/csug/csug.bib
  vendor/ChezScheme/csug/csug.css
  vendor/ChezScheme/csug/csug.stex
  vendor/ChezScheme/csug/csug8.cls
  vendor/ChezScheme/csug/csug8.hcls
  vendor/ChezScheme/csug/csug810.clo
  vendor/ChezScheme/csug/debug.stex
  vendor/ChezScheme/csug/docond.ss
  vendor/ChezScheme/csug/expeditor.stex
  vendor/ChezScheme/csug/foreign.stex
  vendor/ChezScheme/csug/gifs/ghostRightarrow.gif
  vendor/ChezScheme/csug/gifs/Makefile
  vendor/ChezScheme/csug/gifs/Rightarrow.tex
  vendor/ChezScheme/csug/intro.stex
  vendor/ChezScheme/csug/io.stex
  vendor/ChezScheme/csug/libraries.stex
  vendor/ChezScheme/csug/math/Makefile
  vendor/ChezScheme/csug/math/mathmacros
  vendor/ChezScheme/csug/myfile.ss
  vendor/ChezScheme/csug/numeric.stex
  vendor/ChezScheme/csug/objects.stex
  vendor/ChezScheme/csug/oop.stex
  vendor/ChezScheme/csug/preface.stex
  vendor/ChezScheme/csug/priminfo.ss
  vendor/ChezScheme/csug/scheme.hsty
  vendor/ChezScheme/csug/scheme.sty
  vendor/ChezScheme/csug/setup.ss
  vendor/ChezScheme/csug/smgmt.stex
  vendor/ChezScheme/csug/summary.ss
  vendor/ChezScheme/csug/summary.stex
  vendor/ChezScheme/csug/syntax.stex
  vendor/ChezScheme/csug/system.stex
  vendor/ChezScheme/csug/threads.stex
  vendor/ChezScheme/csug/title.stex
  vendor/ChezScheme/csug/tspl.bst
  vendor/ChezScheme/csug/tspl4/answers.aux
  vendor/ChezScheme/csug/tspl4/bibliography.aux
  vendor/ChezScheme/csug/tspl4/binding.aux
  vendor/ChezScheme/csug/tspl4/contents.aux
  vendor/ChezScheme/csug/tspl4/control.aux
  vendor/ChezScheme/csug/tspl4/copyright.aux
  vendor/ChezScheme/csug/tspl4/examples.aux
  vendor/ChezScheme/csug/tspl4/exceptions.aux
  vendor/ChezScheme/csug/tspl4/further.aux
  vendor/ChezScheme/csug/tspl4/grammar.aux
  vendor/ChezScheme/csug/tspl4/intro.aux
  vendor/ChezScheme/csug/tspl4/io.aux
  vendor/ChezScheme/csug/tspl4/libraries.aux
  vendor/ChezScheme/csug/tspl4/objects.aux
  vendor/ChezScheme/csug/tspl4/out.hidx
  vendor/ChezScheme/csug/tspl4/preface.aux
  vendor/ChezScheme/csug/tspl4/records.aux
  vendor/ChezScheme/csug/tspl4/start.aux
  vendor/ChezScheme/csug/tspl4/summary.aux
  vendor/ChezScheme/csug/tspl4/syntax.aux
  vendor/ChezScheme/csug/tspl4/title.aux
  vendor/ChezScheme/csug/tspl4/tspl.aux
  vendor/ChezScheme/csug/tspl4/tspl.haux
  vendor/ChezScheme/csug/tspl4/tspl.idx
  vendor/ChezScheme/csug/tspl4/tspl.rfm
  vendor/ChezScheme/csug/tspl4-prep.stex
  vendor/ChezScheme/csug/use.stex
  vendor/ChezScheme/examples/compat.ss
  vendor/ChezScheme/examples/crepl.c
  vendor/ChezScheme/examples/csocket.c
  vendor/ChezScheme/examples/def.ss
  vendor/ChezScheme/examples/edit.ss
  vendor/ChezScheme/examples/ez-grammar-test.ss
  vendor/ChezScheme/examples/ez-grammar.ss
  vendor/ChezScheme/examples/fact.ss
  vendor/ChezScheme/examples/fatfib.ss
  vendor/ChezScheme/examples/fft.ss
  vendor/ChezScheme/examples/fib.ss
  vendor/ChezScheme/examples/foreign.ss
  vendor/ChezScheme/examples/freq.ss
  vendor/ChezScheme/examples/interpret.ss
  vendor/ChezScheme/examples/m4.ss
  vendor/ChezScheme/examples/macro.ss
  vendor/ChezScheme/examples/Makefile
  vendor/ChezScheme/examples/matrix.ss
  vendor/ChezScheme/examples/object.ss
  vendor/ChezScheme/examples/power.ss
  vendor/ChezScheme/examples/queue.ss
  vendor/ChezScheme/examples/rabbit.ss
  vendor/ChezScheme/examples/rsa.ss
  vendor/ChezScheme/examples/scons.ss
  vendor/ChezScheme/examples/setof.ss
  vendor/ChezScheme/examples/socket.ss
  vendor/ChezScheme/examples/template.ss
  vendor/ChezScheme/examples/unify.ss
  vendor/ChezScheme/LICENSE
  vendor/ChezScheme/lz4/.cirrus.yml
  vendor/ChezScheme/lz4/build/cmake/CMakeLists.txt
  vendor/ChezScheme/lz4/build/VS2010/datagen/datagen.vcxproj
  vendor/ChezScheme/lz4/build/VS2010/frametest/frametest.vcxproj
  vendor/ChezScheme/lz4/build/VS2010/fullbench/fullbench.vcxproj
  vendor/ChezScheme/lz4/build/VS2010/fullbench-dll/fullbench-dll.vcxproj
  vendor/ChezScheme/lz4/build/VS2010/fuzzer/fuzzer.vcxproj
  vendor/ChezScheme/lz4/build/VS2010/liblz4/liblz4.vcxproj
  vendor/ChezScheme/lz4/build/VS2010/liblz4-dll/liblz4-dll.rc
  vendor/ChezScheme/lz4/build/VS2010/liblz4-dll/liblz4-dll.vcxproj
  vendor/ChezScheme/lz4/build/VS2010/lz4/lz4.rc
  vendor/ChezScheme/lz4/build/VS2010/lz4/lz4.vcxproj
  vendor/ChezScheme/lz4/build/VS2010/lz4.sln
  vendor/ChezScheme/lz4/build/VS2017/datagen/datagen.vcxproj
  vendor/ChezScheme/lz4/build/VS2017/frametest/frametest.vcxproj
  vendor/ChezScheme/lz4/build/VS2017/fullbench/fullbench.vcxproj
  vendor/ChezScheme/lz4/build/VS2017/fullbench-dll/fullbench-dll.vcxproj
  vendor/ChezScheme/lz4/build/VS2017/fuzzer/fuzzer.vcxproj
  vendor/ChezScheme/lz4/build/VS2017/liblz4/liblz4.vcxproj
  vendor/ChezScheme/lz4/build/VS2017/liblz4-dll/liblz4-dll.rc
  vendor/ChezScheme/lz4/build/VS2017/liblz4-dll/liblz4-dll.vcxproj
  vendor/ChezScheme/lz4/build/VS2017/lz4/lz4.rc
  vendor/ChezScheme/lz4/build/VS2017/lz4/lz4.vcxproj
  vendor/ChezScheme/lz4/build/VS2017/lz4.sln
  vendor/ChezScheme/lz4/contrib/debian/compat
  vendor/ChezScheme/lz4/contrib/debian/control
  vendor/ChezScheme/lz4/contrib/debian/copyright
  vendor/ChezScheme/lz4/contrib/debian/dirs
  vendor/ChezScheme/lz4/contrib/debian/docs
  vendor/ChezScheme/lz4/contrib/debian/liblz4-dev.install
  vendor/ChezScheme/lz4/contrib/debian/liblz4.install
  vendor/ChezScheme/lz4/contrib/debian/rules
  vendor/ChezScheme/lz4/contrib/djgpp/LICENSE
  vendor/ChezScheme/lz4/contrib/djgpp/Makefile
  vendor/ChezScheme/lz4/contrib/djgpp/README.MD
  vendor/ChezScheme/lz4/contrib/gen_manual/gen-lz4-manual.sh
  vendor/ChezScheme/lz4/contrib/gen_manual/gen_manual.cpp
  vendor/ChezScheme/lz4/contrib/gen_manual/Makefile
  vendor/ChezScheme/lz4/contrib/meson/meson/contrib/gen_manual/meson.build
  vendor/ChezScheme/lz4/contrib/meson/meson/contrib/meson.build
  vendor/ChezScheme/lz4/contrib/meson/meson/examples/meson.build
  vendor/ChezScheme/lz4/contrib/meson/meson/GetLz4LibraryVersion.py
  vendor/ChezScheme/lz4/contrib/meson/meson/InstallSymlink.py
  vendor/ChezScheme/lz4/contrib/meson/meson/lib/meson.build
  vendor/ChezScheme/lz4/contrib/meson/meson/meson.build
  vendor/ChezScheme/lz4/contrib/meson/meson/programs/meson.build
  vendor/ChezScheme/lz4/contrib/meson/meson/tests/meson.build
  vendor/ChezScheme/lz4/contrib/meson/meson.build
  vendor/ChezScheme/lz4/contrib/meson/meson_options.txt
  vendor/ChezScheme/lz4/contrib/snap/snapcraft.yaml
  vendor/ChezScheme/lz4/lib/dll/example/fullbench-dll.sln
  vendor/ChezScheme/lz4/lib/dll/example/fullbench-dll.vcxproj
  vendor/ChezScheme/lz4/lib/dll/example/Makefile
  vendor/ChezScheme/lz4/lib/liblz4-dll.rc.in
  vendor/ChezScheme/lz4/lib/liblz4.pc.in
  vendor/ChezScheme/lz4/lib/LICENSE
  vendor/ChezScheme/lz4/lib/lz4.c
  vendor/ChezScheme/lz4/lib/lz4.h
  vendor/ChezScheme/lz4/lib/lz4frame.c
  vendor/ChezScheme/lz4/lib/lz4frame.h
  vendor/ChezScheme/lz4/lib/lz4frame_static.h
  vendor/ChezScheme/lz4/lib/lz4hc.c
  vendor/ChezScheme/lz4/lib/lz4hc.h
  vendor/ChezScheme/lz4/lib/Makefile
  vendor/ChezScheme/lz4/lib/xxhash.c
  vendor/ChezScheme/lz4/lib/xxhash.h
  vendor/ChezScheme/lz4/LICENSE
  vendor/ChezScheme/lz4/Makefile
  vendor/ChezScheme/lz4/Makefile.inc
  vendor/ChezScheme/lz4/ossfuzz/compress_frame_fuzzer.c
  vendor/ChezScheme/lz4/ossfuzz/compress_fuzzer.c
  vendor/ChezScheme/lz4/ossfuzz/compress_hc_fuzzer.c
  vendor/ChezScheme/lz4/ossfuzz/decompress_frame_fuzzer.c
  vendor/ChezScheme/lz4/ossfuzz/decompress_fuzzer.c
  vendor/ChezScheme/lz4/ossfuzz/fuzz.h
  vendor/ChezScheme/lz4/ossfuzz/fuzz_data_producer.c
  vendor/ChezScheme/lz4/ossfuzz/fuzz_data_producer.h
  vendor/ChezScheme/lz4/ossfuzz/fuzz_helpers.h
  vendor/ChezScheme/lz4/ossfuzz/lz4_helpers.c
  vendor/ChezScheme/lz4/ossfuzz/lz4_helpers.h
  vendor/ChezScheme/lz4/ossfuzz/Makefile
  vendor/ChezScheme/lz4/ossfuzz/ossfuzz.sh
  vendor/ChezScheme/lz4/ossfuzz/round_trip_frame_fuzzer.c
  vendor/ChezScheme/lz4/ossfuzz/round_trip_fuzzer.c
  vendor/ChezScheme/lz4/ossfuzz/round_trip_hc_fuzzer.c
  vendor/ChezScheme/lz4/ossfuzz/round_trip_stream_fuzzer.c
  vendor/ChezScheme/lz4/ossfuzz/standaloneengine.c
  vendor/ChezScheme/lz4/ossfuzz/travisoss.sh
  vendor/ChezScheme/lz4/programs/bench.c
  vendor/ChezScheme/lz4/programs/bench.h
  vendor/ChezScheme/lz4/programs/COPYING
  vendor/ChezScheme/lz4/programs/datagen.c
  vendor/ChezScheme/lz4/programs/datagen.h
  vendor/ChezScheme/lz4/programs/lz4-exe.rc.in
  vendor/ChezScheme/lz4/programs/lz4.1
  vendor/ChezScheme/lz4/programs/lz4cli.c
  vendor/ChezScheme/lz4/programs/lz4io.c
  vendor/ChezScheme/lz4/programs/lz4io.h
  vendor/ChezScheme/lz4/programs/Makefile
  vendor/ChezScheme/lz4/programs/platform.h
  vendor/ChezScheme/lz4/programs/util.h
  vendor/ChezScheme/lz4/tmp
  vendor/ChezScheme/lz4/tmpsparse
  vendor/ChezScheme/makefiles/installsh
  vendor/ChezScheme/makefiles/Makefile-csug.in
  vendor/ChezScheme/makefiles/Makefile-release_notes.in
  vendor/ChezScheme/makefiles/Makefile-workarea.in
  vendor/ChezScheme/makefiles/Makefile.in
  vendor/ChezScheme/makefiles/Mf-boot.in
  vendor/ChezScheme/makefiles/Mf-install.in
  vendor/ChezScheme/mats/3.ms
  vendor/ChezScheme/mats/4.ms
  vendor/ChezScheme/mats/5_1.ms
  vendor/ChezScheme/mats/5_2.ms
  vendor/ChezScheme/mats/5_3.ms
  vendor/ChezScheme/mats/5_4.ms
  vendor/ChezScheme/mats/5_5.ms
  vendor/ChezScheme/mats/5_6.ms
  vendor/ChezScheme/mats/5_7.ms
  vendor/ChezScheme/mats/5_8.ms
  vendor/ChezScheme/mats/6.ms
  vendor/ChezScheme/mats/7.ms
  vendor/ChezScheme/mats/8.ms
  vendor/ChezScheme/mats/bytevector.ms
  vendor/ChezScheme/mats/cat_flush.c
  vendor/ChezScheme/mats/cfl.ms
  vendor/ChezScheme/mats/cp0.ms
  vendor/ChezScheme/mats/date.ms
  vendor/ChezScheme/mats/enum.ms
  vendor/ChezScheme/mats/examples.ms
  vendor/ChezScheme/mats/exceptions.ms
  vendor/ChezScheme/mats/fl.ms
  vendor/ChezScheme/mats/foreign.ms
  vendor/ChezScheme/mats/foreign1.c
  vendor/ChezScheme/mats/foreign2.c
  vendor/ChezScheme/mats/foreign3.c
  vendor/ChezScheme/mats/foreign4.c
  vendor/ChezScheme/mats/format.ms
  vendor/ChezScheme/mats/freq.in
  vendor/ChezScheme/mats/freq.out
  vendor/ChezScheme/mats/ftype.h
  vendor/ChezScheme/mats/ftype.ms
  vendor/ChezScheme/mats/fx.ms
  vendor/ChezScheme/mats/hash.ms
  vendor/ChezScheme/mats/ht.ss
  vendor/ChezScheme/mats/ieee.ms
  vendor/ChezScheme/mats/io.ms
  vendor/ChezScheme/mats/m4test.in
  vendor/ChezScheme/mats/m4test.out
  vendor/ChezScheme/mats/mat.ss
  vendor/ChezScheme/mats/Mf-a6fb
  vendor/ChezScheme/mats/Mf-a6le
  vendor/ChezScheme/mats/Mf-a6nb
  vendor/ChezScheme/mats/Mf-a6nt
  vendor/ChezScheme/mats/Mf-a6ob
  vendor/ChezScheme/mats/Mf-a6osx
  vendor/ChezScheme/mats/Mf-a6s2
  vendor/ChezScheme/mats/Mf-arm32le
  vendor/ChezScheme/mats/Mf-base
  vendor/ChezScheme/mats/Mf-i3fb
  vendor/ChezScheme/mats/Mf-i3le
  vendor/ChezScheme/mats/Mf-i3nb
  vendor/ChezScheme/mats/Mf-i3nt
  vendor/ChezScheme/mats/Mf-i3ob
  vendor/ChezScheme/mats/Mf-i3osx
  vendor/ChezScheme/mats/Mf-i3qnx
  vendor/ChezScheme/mats/Mf-i3s2
  vendor/ChezScheme/mats/Mf-ppc32le
  vendor/ChezScheme/mats/Mf-ta6fb
  vendor/ChezScheme/mats/Mf-ta6le
  vendor/ChezScheme/mats/Mf-ta6nb
  vendor/ChezScheme/mats/Mf-ta6nt
  vendor/ChezScheme/mats/Mf-ta6ob
  vendor/ChezScheme/mats/Mf-ta6osx
  vendor/ChezScheme/mats/Mf-ta6s2
  vendor/ChezScheme/mats/Mf-ti3fb
  vendor/ChezScheme/mats/Mf-ti3le
  vendor/ChezScheme/mats/Mf-ti3nb
  vendor/ChezScheme/mats/Mf-ti3nt
  vendor/ChezScheme/mats/Mf-ti3ob
  vendor/ChezScheme/mats/Mf-ti3osx
  vendor/ChezScheme/mats/Mf-ti3s2
  vendor/ChezScheme/mats/Mf-tppc32le
  vendor/ChezScheme/mats/misc.ms
  vendor/ChezScheme/mats/oop.ms
  vendor/ChezScheme/mats/oop.ss
  vendor/ChezScheme/mats/patch-compile-0-f-f-t
  vendor/ChezScheme/mats/patch-compile-0-f-t-f
  vendor/ChezScheme/mats/patch-compile-0-f-t-t
  vendor/ChezScheme/mats/patch-compile-0-t-f-f
  vendor/ChezScheme/mats/patch-compile-0-t-f-t
  vendor/ChezScheme/mats/patch-compile-0-t-t-f
  vendor/ChezScheme/mats/patch-compile-0-t-t-t
  vendor/ChezScheme/mats/patch-compile-2-f-f-t
  vendor/ChezScheme/mats/patch-compile-2-f-t-f
  vendor/ChezScheme/mats/patch-compile-2-f-t-t
  vendor/ChezScheme/mats/patch-compile-2-t-f-f
  vendor/ChezScheme/mats/patch-compile-2-t-f-t
  vendor/ChezScheme/mats/patch-compile-2-t-t-f
  vendor/ChezScheme/mats/patch-compile-2-t-t-t
  vendor/ChezScheme/mats/patch-compile-3-f-f-t
  vendor/ChezScheme/mats/patch-compile-3-f-t-f
  vendor/ChezScheme/mats/patch-compile-3-f-t-t
  vendor/ChezScheme/mats/patch-compile-3-t-f-f
  vendor/ChezScheme/mats/patch-compile-3-t-f-t
  vendor/ChezScheme/mats/patch-compile-3-t-t-f
  vendor/ChezScheme/mats/patch-compile-3-t-t-t
  vendor/ChezScheme/mats/patch-interpret-0-f-f-f
  vendor/ChezScheme/mats/patch-interpret-0-f-t-f
  vendor/ChezScheme/mats/patch-interpret-0-t-f-f
  vendor/ChezScheme/mats/patch-interpret-0-t-t-f
  vendor/ChezScheme/mats/patch-interpret-2-f-f-f
  vendor/ChezScheme/mats/patch-interpret-2-f-t-f
  vendor/ChezScheme/mats/patch-interpret-2-t-f-f
  vendor/ChezScheme/mats/patch-interpret-2-t-t-f
  vendor/ChezScheme/mats/patch-interpret-3-f-f-f
  vendor/ChezScheme/mats/patch-interpret-3-f-t-f
  vendor/ChezScheme/mats/patch-interpret-3-t-f-f
  vendor/ChezScheme/mats/patch-interpret-3-t-t-f
  vendor/ChezScheme/mats/primvars.ms
  vendor/ChezScheme/mats/profile.ms
  vendor/ChezScheme/mats/record.ms
  vendor/ChezScheme/mats/root-experr-compile-0-f-f-f
  vendor/ChezScheme/mats/root-experr-compile-2-f-f-f
  vendor/ChezScheme/mats/root-experr-compile-3-f-f-f
  vendor/ChezScheme/mats/thread-check.ss
  vendor/ChezScheme/mats/thread.ms
  vendor/ChezScheme/mats/unix.ms
  vendor/ChezScheme/mats/vs.bat
  vendor/ChezScheme/mats/windows.ms
  vendor/ChezScheme/nanopass/Acknowledgements
  vendor/ChezScheme/nanopass/Copyright
  vendor/ChezScheme/nanopass/nanopass/exp-syntax.sls
  vendor/ChezScheme/nanopass/nanopass/experimental.sls
  vendor/ChezScheme/nanopass/nanopass/helpers.ss
  vendor/ChezScheme/nanopass/nanopass/implementation-helpers.chezscheme.sls
  vendor/ChezScheme/nanopass/nanopass/implementation-helpers.ikarus.ss
  vendor/ChezScheme/nanopass/nanopass/implementation-helpers.ironscheme.sls
  vendor/ChezScheme/nanopass/nanopass/implementation-helpers.vicare.sls
  vendor/ChezScheme/nanopass/nanopass/language-helpers.ss
  vendor/ChezScheme/nanopass/nanopass/language-node-counter.ss
  vendor/ChezScheme/nanopass/nanopass/language.ss
  vendor/ChezScheme/nanopass/nanopass/meta-parser.ss
  vendor/ChezScheme/nanopass/nanopass/meta-syntax-dispatch.ss
  vendor/ChezScheme/nanopass/nanopass/nano-syntax-dispatch.ss
  vendor/ChezScheme/nanopass/nanopass/parser.ss
  vendor/ChezScheme/nanopass/nanopass/pass.ss
  vendor/ChezScheme/nanopass/nanopass/prefix-matcher.ss
  vendor/ChezScheme/nanopass/nanopass/records.ss
  vendor/ChezScheme/nanopass/nanopass/syntactic-property.sls
  vendor/ChezScheme/nanopass/nanopass/syntaxconvert.ss
  vendor/ChezScheme/nanopass/nanopass/unparser.ss
  vendor/ChezScheme/nanopass/nanopass.ss
  vendor/ChezScheme/nanopass/test-all.ss
  vendor/ChezScheme/newrelease
  vendor/ChezScheme/pkg/Makefile
  vendor/ChezScheme/pkg/rmpkg
  vendor/ChezScheme/release_notes/gifs/ghostRightarrow.gif
  vendor/ChezScheme/release_notes/gifs/Makefile
  vendor/ChezScheme/release_notes/gifs/Rightarrow.tex
  vendor/ChezScheme/release_notes/macros.stex
  vendor/ChezScheme/release_notes/math/Makefile
  vendor/ChezScheme/release_notes/math/mathmacros
  vendor/ChezScheme/release_notes/release_notes.stex
  vendor/ChezScheme/release_notes/releasenotes.cls
  vendor/ChezScheme/release_notes/releasenotes.css
  vendor/ChezScheme/release_notes/releasenotes.hcls
  vendor/ChezScheme/release_notes/scheme.sty
  vendor/ChezScheme/rpm/Makefile
  vendor/ChezScheme/s/4.ss
  vendor/ChezScheme/s/5_1.ss
  vendor/ChezScheme/s/5_2.ss
  vendor/ChezScheme/s/5_3.ss
  vendor/ChezScheme/s/5_4.ss
  vendor/ChezScheme/s/5_6.ss
  vendor/ChezScheme/s/5_7.ss
  vendor/ChezScheme/s/6.ss
  vendor/ChezScheme/s/7.ss
  vendor/ChezScheme/s/a6fb.def
  vendor/ChezScheme/s/a6le.def
  vendor/ChezScheme/s/a6nb.def
  vendor/ChezScheme/s/a6nt.def
  vendor/ChezScheme/s/a6ob.def
  vendor/ChezScheme/s/a6osx.def
  vendor/ChezScheme/s/a6s2.def
  vendor/ChezScheme/s/arm32.ss
  vendor/ChezScheme/s/arm32le.def
  vendor/ChezScheme/s/back.ss
  vendor/ChezScheme/s/base-lang.ss
  vendor/ChezScheme/s/bytevector.ss
  vendor/ChezScheme/s/cafe.ss
  vendor/ChezScheme/s/cback.ss
  vendor/ChezScheme/s/cmacros.ss
  vendor/ChezScheme/s/compile.ss
  vendor/ChezScheme/s/costctr.ss
  vendor/ChezScheme/s/cp0.ss
  vendor/ChezScheme/s/cpcheck.ss
  vendor/ChezScheme/s/cpcommonize.ss
  vendor/ChezScheme/s/cpletrec.ss
  vendor/ChezScheme/s/cpnanopass.ss
  vendor/ChezScheme/s/cprep.ss
  vendor/ChezScheme/s/cpvalid.ss
  vendor/ChezScheme/s/date.ss
  vendor/ChezScheme/s/debug.ss
  vendor/ChezScheme/s/engine.ss
  vendor/ChezScheme/s/enum.ss
  vendor/ChezScheme/s/env.ss
  vendor/ChezScheme/s/event.ss
  vendor/ChezScheme/s/exceptions.ss
  vendor/ChezScheme/s/expand-lang.ss
  vendor/ChezScheme/s/expeditor.ss
  vendor/ChezScheme/s/fasl-helpers.ss
  vendor/ChezScheme/s/fasl.ss
  vendor/ChezScheme/s/foreign.ss
  vendor/ChezScheme/s/format.ss
  vendor/ChezScheme/s/front.ss
  vendor/ChezScheme/s/ftype.ss
  vendor/ChezScheme/s/hashtable-types.ss
  vendor/ChezScheme/s/i3fb.def
  vendor/ChezScheme/s/i3le.def
  vendor/ChezScheme/s/i3nb.def
  vendor/ChezScheme/s/i3nt.def
  vendor/ChezScheme/s/i3ob.def
  vendor/ChezScheme/s/i3osx.def
  vendor/ChezScheme/s/i3qnx.def
  vendor/ChezScheme/s/i3s2.def
  vendor/ChezScheme/s/inspect.ss
  vendor/ChezScheme/s/interpret.ss
  vendor/ChezScheme/s/io-types.ss
  vendor/ChezScheme/s/io.ss
  vendor/ChezScheme/s/layout.ss
  vendor/ChezScheme/s/library.ss
  vendor/ChezScheme/s/mathprims.ss
  vendor/ChezScheme/s/Mf-a6fb
  vendor/ChezScheme/s/Mf-a6le
  vendor/ChezScheme/s/Mf-a6nb
  vendor/ChezScheme/s/Mf-a6nt
  vendor/ChezScheme/s/Mf-a6ob
  vendor/ChezScheme/s/Mf-a6osx
  vendor/ChezScheme/s/Mf-a6s2
  vendor/ChezScheme/s/Mf-arm32le
  vendor/ChezScheme/s/Mf-base
  vendor/ChezScheme/s/Mf-cross
  vendor/ChezScheme/s/Mf-i3fb
  vendor/ChezScheme/s/Mf-i3le
  vendor/ChezScheme/s/Mf-i3nb
  vendor/ChezScheme/s/Mf-i3nt
  vendor/ChezScheme/s/Mf-i3ob
  vendor/ChezScheme/s/Mf-i3osx
  vendor/ChezScheme/s/Mf-i3qnx
  vendor/ChezScheme/s/Mf-i3s2
  vendor/ChezScheme/s/Mf-ppc32le
  vendor/ChezScheme/s/Mf-ta6fb
  vendor/ChezScheme/s/Mf-ta6le
  vendor/ChezScheme/s/Mf-ta6nb
  vendor/ChezScheme/s/Mf-ta6nt
  vendor/ChezScheme/s/Mf-ta6ob
  vendor/ChezScheme/s/Mf-ta6osx
  vendor/ChezScheme/s/Mf-ta6s2
  vendor/ChezScheme/s/Mf-ti3fb
  vendor/ChezScheme/s/Mf-ti3le
  vendor/ChezScheme/s/Mf-ti3nb
  vendor/ChezScheme/s/Mf-ti3nt
  vendor/ChezScheme/s/Mf-ti3ob
  vendor/ChezScheme/s/Mf-ti3osx
  vendor/ChezScheme/s/Mf-ti3s2
  vendor/ChezScheme/s/Mf-tppc32le
  vendor/ChezScheme/s/mkheader.ss
  vendor/ChezScheme/s/newhash.ss
  vendor/ChezScheme/s/np-languages.ss
  vendor/ChezScheme/s/patch.ss
  vendor/ChezScheme/s/pdhtml.ss
  vendor/ChezScheme/s/ppc32.ss
  vendor/ChezScheme/s/ppc32le.def
  vendor/ChezScheme/s/pretty.ss
  vendor/ChezScheme/s/primdata.ss
  vendor/ChezScheme/s/priminfo.ss
  vendor/ChezScheme/s/primref.ss
  vendor/ChezScheme/s/prims.ss
  vendor/ChezScheme/s/primvars.ss
  vendor/ChezScheme/s/print.ss
  vendor/ChezScheme/s/read.ss
  vendor/ChezScheme/s/record.ss
  vendor/ChezScheme/s/reloc.ss
  vendor/ChezScheme/s/setup.ss
  vendor/ChezScheme/s/strip.ss
  vendor/ChezScheme/s/strnum.ss
  vendor/ChezScheme/s/syntax.ss
  vendor/ChezScheme/s/ta6fb.def
  vendor/ChezScheme/s/ta6le.def
  vendor/ChezScheme/s/ta6nb.def
  vendor/ChezScheme/s/ta6nt.def
  vendor/ChezScheme/s/ta6ob.def
  vendor/ChezScheme/s/ta6osx.def
  vendor/ChezScheme/s/ta6s2.def
  vendor/ChezScheme/s/ti3fb.def
  vendor/ChezScheme/s/ti3le.def
  vendor/ChezScheme/s/ti3nb.def
  vendor/ChezScheme/s/ti3nt.def
  vendor/ChezScheme/s/ti3ob.def
  vendor/ChezScheme/s/ti3osx.def
  vendor/ChezScheme/s/ti3s2.def
  vendor/ChezScheme/s/tppc32le.def
  vendor/ChezScheme/s/trace.ss
  vendor/ChezScheme/s/types.ss
  vendor/ChezScheme/s/ubify.ss
  vendor/ChezScheme/s/update-revision
  vendor/ChezScheme/s/x86.ss
  vendor/ChezScheme/s/x86_64.ss
  vendor/ChezScheme/scheme.1.in
  vendor/ChezScheme/stex/gifs/ghostRightarrow.gif
  vendor/ChezScheme/stex/gifs/Makefile
  vendor/ChezScheme/stex/gifs/Rightarrow.tex
  vendor/ChezScheme/stex/inputs/assign-prep.stex
  vendor/ChezScheme/stex/inputs/assignment.bst
  vendor/ChezScheme/stex/inputs/assignment.cls
  vendor/ChezScheme/stex/inputs/assignment.hcls
  vendor/ChezScheme/stex/inputs/exam.cls
  vendor/ChezScheme/stex/inputs/fullpage.sty
  vendor/ChezScheme/stex/inputs/grammar.hsty
  vendor/ChezScheme/stex/inputs/grammar.sty
  vendor/ChezScheme/stex/inputs/html-prep.tex
  vendor/ChezScheme/stex/inputs/monograph.cls
  vendor/ChezScheme/stex/inputs/monograph.hcls
  vendor/ChezScheme/stex/inputs/quiz.cls
  vendor/ChezScheme/stex/inputs/scheme.hsty
  vendor/ChezScheme/stex/inputs/scheme.sty
  vendor/ChezScheme/stex/inputs/website.cls
  vendor/ChezScheme/stex/inputs/website.hcls
  vendor/ChezScheme/stex/Makefile
  vendor/ChezScheme/stex/Makefile.template
  vendor/ChezScheme/stex/math/Makefile
  vendor/ChezScheme/stex/math/mathmacros
  vendor/ChezScheme/stex/Mf-stex
  vendor/ChezScheme/stex/src/dsm.ss
  vendor/ChezScheme/stex/src/fixbibtex.ss
  vendor/ChezScheme/stex/src/html-prep.ss
  vendor/ChezScheme/stex/src/preplib.ss
  vendor/ChezScheme/stex/src/scheme-prep.ss
  vendor/ChezScheme/stex/src/script.ss
  vendor/ChezScheme/unicode/extract-char-cases.ss
  vendor/ChezScheme/unicode/extract-common.ss
  vendor/ChezScheme/unicode/extract-info.ss
  vendor/ChezScheme/unicode/Makefile
  vendor/ChezScheme/unicode/unicode-char-cases.ss
  vendor/ChezScheme/unicode/unicode-charinfo.ss
  vendor/ChezScheme/unicode/unicode-data.ss
  vendor/ChezScheme/unicode/UNIDATA/CaseFolding.txt
  vendor/ChezScheme/unicode/UNIDATA/CompositionExclusions.txt
  vendor/ChezScheme/unicode/UNIDATA/NormalizationTest.txt
  vendor/ChezScheme/unicode/UNIDATA/PropList.txt
  vendor/ChezScheme/unicode/UNIDATA/SpecialCasing.txt
  vendor/ChezScheme/unicode/UNIDATA/UnicodeData.txt
  vendor/ChezScheme/unicode/UNIDATA/WordBreakProperty.txt
  vendor/ChezScheme/wininstall/a6nt.wxs
  vendor/ChezScheme/wininstall/bundle.wxs
  vendor/ChezScheme/wininstall/candle.bat
  vendor/ChezScheme/wininstall/cs.png
  vendor/ChezScheme/wininstall/examples.wxs
  vendor/ChezScheme/wininstall/i3nt.wxs
  vendor/ChezScheme/wininstall/license.rtf
  vendor/ChezScheme/wininstall/light.bat
  vendor/ChezScheme/wininstall/locate-vcredist.bat
  vendor/ChezScheme/wininstall/Makefile
  vendor/ChezScheme/wininstall/product.wxs
  vendor/ChezScheme/wininstall/ta6nt.wxs
  vendor/ChezScheme/wininstall/ti3nt.wxs
  vendor/ChezScheme/wininstall/ui.wxs
  vendor/ChezScheme/workarea
  vendor/ChezScheme/zlib/adler32.c
  vendor/ChezScheme/zlib/amiga/Makefile.pup
  vendor/ChezScheme/zlib/amiga/Makefile.sas
  vendor/ChezScheme/zlib/CMakeLists.txt
  vendor/ChezScheme/zlib/compress.c
  vendor/ChezScheme/zlib/configure
  vendor/ChezScheme/zlib/contrib/ada/buffer_demo.adb
  vendor/ChezScheme/zlib/contrib/ada/mtest.adb
  vendor/ChezScheme/zlib/contrib/ada/read.adb
  vendor/ChezScheme/zlib/contrib/ada/readme.txt
  vendor/ChezScheme/zlib/contrib/ada/test.adb
  vendor/ChezScheme/zlib/contrib/ada/zlib-streams.adb
  vendor/ChezScheme/zlib/contrib/ada/zlib-streams.ads
  vendor/ChezScheme/zlib/contrib/ada/zlib-thin.adb
  vendor/ChezScheme/zlib/contrib/ada/zlib-thin.ads
  vendor/ChezScheme/zlib/contrib/ada/zlib.adb
  vendor/ChezScheme/zlib/contrib/ada/zlib.ads
  vendor/ChezScheme/zlib/contrib/ada/zlib.gpr
  vendor/ChezScheme/zlib/contrib/blast/blast.c
  vendor/ChezScheme/zlib/contrib/blast/blast.h
  vendor/ChezScheme/zlib/contrib/blast/Makefile
  vendor/ChezScheme/zlib/contrib/blast/test.pk
  vendor/ChezScheme/zlib/contrib/blast/test.txt
  vendor/ChezScheme/zlib/contrib/delphi/readme.txt
  vendor/ChezScheme/zlib/contrib/delphi/ZLib.pas
  vendor/ChezScheme/zlib/contrib/delphi/ZLibConst.pas
  vendor/ChezScheme/zlib/contrib/delphi/zlibd32.mak
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/AssemblyInfo.cs
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/ChecksumImpl.cs
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/CircularBuffer.cs
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/CodecBase.cs
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/Deflater.cs
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/DotZLib.cs
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/DotZLib.csproj
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/GZipStream.cs
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/Inflater.cs
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib/UnitTests.cs
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib.build
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib.chm
  vendor/ChezScheme/zlib/contrib/dotzlib/DotZLib.sln
  vendor/ChezScheme/zlib/contrib/dotzlib/LICENSE_1_0.txt
  vendor/ChezScheme/zlib/contrib/dotzlib/readme.txt
  vendor/ChezScheme/zlib/contrib/gcc_gvmat64/gvmat64.S
  vendor/ChezScheme/zlib/contrib/infback9/infback9.c
  vendor/ChezScheme/zlib/contrib/infback9/infback9.h
  vendor/ChezScheme/zlib/contrib/infback9/inffix9.h
  vendor/ChezScheme/zlib/contrib/infback9/inflate9.h
  vendor/ChezScheme/zlib/contrib/infback9/inftree9.c
  vendor/ChezScheme/zlib/contrib/infback9/inftree9.h
  vendor/ChezScheme/zlib/contrib/iostream/test.cpp
  vendor/ChezScheme/zlib/contrib/iostream/zfstream.cpp
  vendor/ChezScheme/zlib/contrib/iostream/zfstream.h
  vendor/ChezScheme/zlib/contrib/iostream2/zstream.h
  vendor/ChezScheme/zlib/contrib/iostream2/zstream_test.cpp
  vendor/ChezScheme/zlib/contrib/iostream3/test.cc
  vendor/ChezScheme/zlib/contrib/iostream3/zfstream.cc
  vendor/ChezScheme/zlib/contrib/iostream3/zfstream.h
  vendor/ChezScheme/zlib/contrib/minizip/configure.ac
  vendor/ChezScheme/zlib/contrib/minizip/crypt.h
  vendor/ChezScheme/zlib/contrib/minizip/ioapi.c
  vendor/ChezScheme/zlib/contrib/minizip/ioapi.h
  vendor/ChezScheme/zlib/contrib/minizip/iowin32.c
  vendor/ChezScheme/zlib/contrib/minizip/iowin32.h
  vendor/ChezScheme/zlib/contrib/minizip/make_vms.com
  vendor/ChezScheme/zlib/contrib/minizip/Makefile
  vendor/ChezScheme/zlib/contrib/minizip/Makefile.am
  vendor/ChezScheme/zlib/contrib/minizip/miniunz.c
  vendor/ChezScheme/zlib/contrib/minizip/miniunzip.1
  vendor/ChezScheme/zlib/contrib/minizip/minizip.1
  vendor/ChezScheme/zlib/contrib/minizip/minizip.c
  vendor/ChezScheme/zlib/contrib/minizip/minizip.pc.in
  vendor/ChezScheme/zlib/contrib/minizip/MiniZip64_Changes.txt
  vendor/ChezScheme/zlib/contrib/minizip/MiniZip64_info.txt
  vendor/ChezScheme/zlib/contrib/minizip/mztools.c
  vendor/ChezScheme/zlib/contrib/minizip/mztools.h
  vendor/ChezScheme/zlib/contrib/minizip/unzip.c
  vendor/ChezScheme/zlib/contrib/minizip/unzip.h
  vendor/ChezScheme/zlib/contrib/minizip/zip.c
  vendor/ChezScheme/zlib/contrib/minizip/zip.h
  vendor/ChezScheme/zlib/contrib/pascal/example.pas
  vendor/ChezScheme/zlib/contrib/pascal/readme.txt
  vendor/ChezScheme/zlib/contrib/pascal/zlibd32.mak
  vendor/ChezScheme/zlib/contrib/pascal/zlibpas.pas
  vendor/ChezScheme/zlib/contrib/puff/Makefile
  vendor/ChezScheme/zlib/contrib/puff/puff.c
  vendor/ChezScheme/zlib/contrib/puff/puff.h
  vendor/ChezScheme/zlib/contrib/puff/pufftest.c
  vendor/ChezScheme/zlib/contrib/puff/zeros.raw
  vendor/ChezScheme/zlib/contrib/README.contrib
  vendor/ChezScheme/zlib/contrib/testzlib/testzlib.c
  vendor/ChezScheme/zlib/contrib/testzlib/testzlib.txt
  vendor/ChezScheme/zlib/contrib/untgz/Makefile
  vendor/ChezScheme/zlib/contrib/untgz/Makefile.msc
  vendor/ChezScheme/zlib/contrib/untgz/untgz.c
  vendor/ChezScheme/zlib/contrib/vstudio/readme.txt
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/miniunz.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/miniunz.vcxproj.filters
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/minizip.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/minizip.vcxproj.filters
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/testzlib.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/testzlib.vcxproj.filters
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/testzlibdll.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/testzlibdll.vcxproj.filters
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/zlib.rc
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/zlibstat.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/zlibstat.vcxproj.filters
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/zlibvc.def
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/zlibvc.sln
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/zlibvc.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc10/zlibvc.vcxproj.filters
  vendor/ChezScheme/zlib/contrib/vstudio/vc11/miniunz.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc11/minizip.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc11/testzlib.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc11/testzlibdll.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc11/zlib.rc
  vendor/ChezScheme/zlib/contrib/vstudio/vc11/zlibstat.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc11/zlibvc.def
  vendor/ChezScheme/zlib/contrib/vstudio/vc11/zlibvc.sln
  vendor/ChezScheme/zlib/contrib/vstudio/vc11/zlibvc.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc12/miniunz.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc12/minizip.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc12/testzlib.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc12/testzlibdll.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc12/zlib.rc
  vendor/ChezScheme/zlib/contrib/vstudio/vc12/zlibstat.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc12/zlibvc.def
  vendor/ChezScheme/zlib/contrib/vstudio/vc12/zlibvc.sln
  vendor/ChezScheme/zlib/contrib/vstudio/vc12/zlibvc.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc14/miniunz.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc14/minizip.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc14/testzlib.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc14/testzlibdll.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc14/zlib.rc
  vendor/ChezScheme/zlib/contrib/vstudio/vc14/zlibstat.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc14/zlibvc.def
  vendor/ChezScheme/zlib/contrib/vstudio/vc14/zlibvc.sln
  vendor/ChezScheme/zlib/contrib/vstudio/vc14/zlibvc.vcxproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc9/miniunz.vcproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc9/minizip.vcproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc9/testzlib.vcproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc9/testzlibdll.vcproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc9/zlib.rc
  vendor/ChezScheme/zlib/contrib/vstudio/vc9/zlibstat.vcproj
  vendor/ChezScheme/zlib/contrib/vstudio/vc9/zlibvc.def
  vendor/ChezScheme/zlib/contrib/vstudio/vc9/zlibvc.sln
  vendor/ChezScheme/zlib/contrib/vstudio/vc9/zlibvc.vcproj
  vendor/ChezScheme/zlib/crc32.c
  vendor/ChezScheme/zlib/crc32.h
  vendor/ChezScheme/zlib/deflate.c
  vendor/ChezScheme/zlib/deflate.h
  vendor/ChezScheme/zlib/examples/enough.c
  vendor/ChezScheme/zlib/examples/fitblk.c
  vendor/ChezScheme/zlib/examples/gun.c
  vendor/ChezScheme/zlib/examples/gzappend.c
  vendor/ChezScheme/zlib/examples/gzjoin.c
  vendor/ChezScheme/zlib/examples/gzlog.c
  vendor/ChezScheme/zlib/examples/gzlog.h
  vendor/ChezScheme/zlib/examples/gznorm.c
  vendor/ChezScheme/zlib/examples/README.examples
  vendor/ChezScheme/zlib/examples/zlib_how.html
  vendor/ChezScheme/zlib/examples/zpipe.c
  vendor/ChezScheme/zlib/examples/zran.c
  vendor/ChezScheme/zlib/examples/zran.h
  vendor/ChezScheme/zlib/gzclose.c
  vendor/ChezScheme/zlib/gzguts.h
  vendor/ChezScheme/zlib/gzlib.c
  vendor/ChezScheme/zlib/gzread.c
  vendor/ChezScheme/zlib/gzwrite.c
  vendor/ChezScheme/zlib/infback.c
  vendor/ChezScheme/zlib/inffast.c
  vendor/ChezScheme/zlib/inffast.h
  vendor/ChezScheme/zlib/inffixed.h
  vendor/ChezScheme/zlib/inflate.c
  vendor/ChezScheme/zlib/inflate.h
  vendor/ChezScheme/zlib/inftrees.c
  vendor/ChezScheme/zlib/inftrees.h
  vendor/ChezScheme/zlib/make_vms.com
  vendor/ChezScheme/zlib/Makefile
  vendor/ChezScheme/zlib/Makefile.in
  vendor/ChezScheme/zlib/msdos/Makefile.bor
  vendor/ChezScheme/zlib/msdos/Makefile.dj2
  vendor/ChezScheme/zlib/msdos/Makefile.emx
  vendor/ChezScheme/zlib/msdos/Makefile.msc
  vendor/ChezScheme/zlib/msdos/Makefile.tc
  vendor/ChezScheme/zlib/nintendods/Makefile
  vendor/ChezScheme/zlib/old/descrip.mms
  vendor/ChezScheme/zlib/old/Makefile.emx
  vendor/ChezScheme/zlib/old/Makefile.riscos
  vendor/ChezScheme/zlib/old/os2/Makefile.os2
  vendor/ChezScheme/zlib/old/os2/zlib.def
  vendor/ChezScheme/zlib/old/visual-basic.txt
  vendor/ChezScheme/zlib/os400/bndsrc
  vendor/ChezScheme/zlib/os400/make.sh
  vendor/ChezScheme/zlib/os400/README400
  vendor/ChezScheme/zlib/os400/zlib.inc
  vendor/ChezScheme/zlib/qnx/package.qpg
  vendor/ChezScheme/zlib/test/example.c
  vendor/ChezScheme/zlib/test/infcover.c
  vendor/ChezScheme/zlib/test/minigzip.c
  vendor/ChezScheme/zlib/treebuild.xml
  vendor/ChezScheme/zlib/trees.c
  vendor/ChezScheme/zlib/trees.h
  vendor/ChezScheme/zlib/uncompr.c
  vendor/ChezScheme/zlib/watcom/watcom_f.mak
  vendor/ChezScheme/zlib/watcom/watcom_l.mak
  vendor/ChezScheme/zlib/win32/DLL_FAQ.txt
  vendor/ChezScheme/zlib/win32/Makefile.bor
  vendor/ChezScheme/zlib/win32/Makefile.gcc
  vendor/ChezScheme/zlib/win32/Makefile.msc
  vendor/ChezScheme/zlib/win32/README-WIN32.txt
  vendor/ChezScheme/zlib/win32/VisualC.txt
  vendor/ChezScheme/zlib/win32/zlib.def
  vendor/ChezScheme/zlib/win32/zlib1.rc
  vendor/ChezScheme/zlib/zconf.h
  vendor/ChezScheme/zlib/zconf.h.cmakein
  vendor/ChezScheme/zlib/zconf.h.in
  vendor/ChezScheme/zlib/zlib.3
  vendor/ChezScheme/zlib/zlib.h
  vendor/ChezScheme/zlib/zlib.map
  vendor/ChezScheme/zlib/zlib.pc.cmakein
  vendor/ChezScheme/zlib/zlib.pc.in
  vendor/ChezScheme/zlib/zlib2ansi
  vendor/ChezScheme/zlib/zutil.c
  vendor/ChezScheme/zlib/zutil.h

-- Generated by `script/extra-source-files.sh`:
tested-with:        GHC ==9.4.1

custom-setup
  setup-depends:
    , base      >=4.9.0.0  && <4.18
    , Cabal     >=1.24.0.0 && <3.9
    , filepath  >=1.4      && <1.5

source-repository head
  type:     git
  location: https://github.com/wenkokke/chez-scheme-hs

library
  hs-source-dirs:   src
  exposed-modules:  Foreign.ChezScheme
  build-depends:    base
  ghc-options:      -Wall
  default-language: Haskell2010

test-suite chez-scheme-hs-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   tests
  build-depends:    base
  ghc-options:      -Wall
  default-language: Haskell2010
